[package]
name = "grist"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
lazy_static = "1.4.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
windows = "0.17.1"
