[package]
name = "grist"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.15.0"
serde_yaml = "0.9.13"

[dependencies.serde]
version = "1.0.136"
features = [
    "derive",
]

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]
